# tblv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-03-09-tblv-design.md  2026-03-09-tblv-implementation.md
src/: app.rs  cli.rs  data.rs  event.rs  geo.rs  main.rs  ui.rs
src/ui/: filter_menu.rs  help.rs  notification.rs  prompt.rs  stats_view.rs  table_view.rs  value_view.rs
