[package]
name = "tblv"
version = "0.1.0"
description = "Table View"
authors = ["ilya.kaftanov <ilya.kaftanov@indriver.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
clap = { version = "4", features = ["derive"] }
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "describe", "timezones", "is_in"] }

[dev-dependencies]
tempfile = "3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
