[package]
name = "tblv"
version = "0.1.1"
description = "Fast terminal viewer for CSV and Parquet files"
authors = ["ilia.kaftanov <ilia.kaftanov.personal@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/IlyaKaftanov/tblv"
keywords = ["csv", "parquet", "tui", "terminal", "viewer"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
clap = { version = "4", features = ["derive"] }
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "describe", "timezones", "is_in", "ipc_streaming"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = "54"

[dev-dependencies]
tempfile = "3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
